--- a/Assignment02/package.json
+++ b/Assignment02/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "expo": "~53.0.11",
+    "expo-router": "^5.1.0",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.3"
